fix we are alignment issue

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -164,17 +164,26 @@ section {
 
 /* We are section */
 #we-are {
-  display: flex;
+  width: 100%;
+  display: grid;
+  /* gap: 20px; */
+  grid-template-columns: auto auto;
+  grid-template-rows: auto auto;
+  grid-template-areas:
+    "leftHeading space"
+    "leftParagraph rightText";
   text-align: left;
-  flex-wrap: wrap;
-  gap: 40px;
   position: relative;
-  align-content: center;
+  align-items: flex-start;
 }
 #we-are .about-heading {
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
+  max-height: fit-content;
+  grid-area: leftHeading;
 }
+
 #we-are .about-flare {
+  grid-area: leftParagraph;
   font-style: italic;
   color: white;
   font-size: 1.5em;
@@ -190,13 +199,19 @@ section {
   }
 }
 #we-are .about-subheading {
+  grid-area: leftHeading;
   font-weight: 500;
   text-transform: uppercase;
   font-size: 1.4em;
   margin-bottom: 10px;
   color: white;
 }
+#we-are .about-content {
+  grid-area: rightText;
+  text-align: right;
+}
 #we-are .about-description {
+  grid-area: rightText;
   color: white;
   font-size: 1em;
 }
@@ -205,6 +220,7 @@ section {
   justify-content: center;
   align-items: center;
   margin-top: 10px;
+  grid-area: rightText;
 }
 .bee .bee-level {
   background: var(--yellow);
